--- a/J1-Express/_corrections/03_kittens/package.json
+++ b/J1-Express/_corrections/03_kittens/package.json
@@ -14,6 +14,7 @@
   },
   "type": "module",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sanitize-html": "^2.11.0"
   }
 }
