--- a/J3-templating-cors-jwt/_corrections/02_cors_api/package.json
+++ b/J3-templating-cors-jwt/_corrections/02_cors_api/package.json
@@ -14,10 +14,11 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "dotenv": "^10.0.0",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "type": "module"
 }
