--- a/J4-mongo/projet_shop/.env
+++ b/J4-mongo/projet_shop/.env
@@ -1,3 +1,5 @@
 APP_HOSTNAME = "localhost"
 APP_PORT = "8000"
 NODE_ENV = "development" # production
+MONGO_STRING = "mongodb://localhost:27017/"
+MONGO_DB_NAME = "nodeshop"
