--- a/J4-mongo/projet_shop/package.json
+++ b/J4-mongo/projet_shop/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^7.5.4",
     "pug": "^3.0.2"
   },
   "type": "module"
